syntax = "proto3";

package intelligentHouse;

option java_package = "com.house.objects";
option java_outer_classname = "thingsOuterClass";
option java_multiple_files = true;

message Info
{
  string name = 1;
  string ip = 2;
  string port = 3;
}

message Lamp
{
  string name = 1;
  bool turn = 2;
  enum Status
  {
    TURNED_ON = 0;
    TURNED_OFF = 1;
    MALFUNCTION = 3;
  }
  Status status = 3;
}

message AirConditioning
{
  bool turn = 1;
  enum Status
  {
    TURNED_ON = 0;
    TURNED_OFF = 1;
    MALFUNCTION = 3;
  }
  Status status = 2;
  int32 setting_temperature = 3;
}

message Windows
{
  bool turn = 1;
  enum Status
  {
    OPEN = 0;
    CLOSED = 1;
    MALFUNCTION = 3;
  }
  Status status = 2;
}
message  User
{
  string command = 1;
}
message TempSensor
{
  int32 temperature = 1;
}